--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   fl_chart: ^0.70.2
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
