--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^5.5.2
   fl_chart: ^0.70.2
   table_calendar: ^3.2.0
+  cloud_firestore: ^5.6.7
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
