--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.2.0
   cloud_firestore: ^5.6.7
   email_validator: ^3.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
